# carbonado

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: constants.rs  decode.rs  decoding.rs  encode.rs  encoding.rs  error.rs  file.rs  fs.rs  lib.rs  structs.rs  util.rs  utils.rs
tests/: apocalypse.rs  codec.rs  format.rs
tests/samples/: code.tar  contract.rgbc
