[package]
name = "carbonado"
version = "0.3.0-rc.5"
edition = "2021"
license = "MIT"
description = "An apocalypse-resistant data storage format for the truly paranoid."
documentation = "https://docs.rs/carbonado"
homepage = "https://github.com/diba-io/carbonado"
repository = "https://github.com/diba-io/carbonado.git"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1"
bao = "0.12.1"
bech32 = "0.9"
bitmask-enum = "2.1.0"
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
hex = "0.4"
log = "0.4"
nom = "7.1.3"
pretty_env_logger = "0.4"
secp256k1 = { version = "0.26.0", features = [
    "global-context",
    "rand-std",
    "bitcoin-hashes-std",
    "serde",
] }
serde = "1"
snap = "1"
zfec-rs = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand = "0.8.5"
