[package]
name = "carbonado"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "An apocalypse-resistant data storage format for the truly paranoid."
documentation = "https://docs.rs/carbonado"
homepage = "https://github.com/diba-io/carbonado"
repository = "https://github.com/diba-io/carbonado.git"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.71"
bao = "0.12.1"
bech32 = "0.9.1"
bitmask-enum = "2.1.0"
bytes = "1.4.0"
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
hex = "0.4.3"
log = "0.4.19"
nom = "7.1.3"
pretty_env_logger = "0.5.0"
secp256k1 = { version = "0.27.0", features = [
    "global-context",
    "rand-std",
    "bitcoin-hashes-std",
    "serde",
] }
serde = "1.0.164"
snap = "1.1.0"

zfec-rs = "0.1.0"

[dev-dependencies]
rand = "0.8.5"
wasm-bindgen-test = "0.3.37"
