[package]
name = "carbonado"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "An apocalypse-resistant data storage format for the truly paranoid."
documentation = "https://docs.rs/carbonado"
homepage = "https://github.com/diba-io/carbonado"
repository = "https://github.com/diba-io/carbonado.git"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
bao = "0.12.1"
bech32 = "0.11.0"
blake3 = "1.5.0"
bitmask-enum = "2.1.0"
bytes = "1.4.0"
ecies = { version = "0.2.6", default-features = false, features = [
    "pure",
    "std",
] }
hex = "0.4.3"
libsecp256k1 = { version = "0.7.1", features = ["std"] }
log = "0.4.19"
nom = "7.1.3"
nostr = "0.28.1"
nostr-sdk = "0.28.0"
pretty_env_logger = "0.5.0"
secp256k1 = { version = "0.28.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
serde = "1.0.164"
snap = "1.1.0"
thiserror = "1.0"
zfec-rs = "0.1.0"
once_cell = "1.19.0"

[dev-dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
wasm-bindgen-test = "0.3.37"
